force-app/main/default/objects/Interest_Schemes__c/Interest_Schemes__c.object-meta.xml
<CustomObject>
    <description>Faiz oranlarını belirleyen Master Dataları tutacağımız object.</description>
    <label>Interest Scheme</label>
    <nameField>
        <displayFormat>FDSCH-{00000}</displayFormat>
        <label>Sheme Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Schemes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>