force-app/main/default/objects/Interest_Schemes__c/fields/From_Amount__c.field-meta.xml
<CustomField>
    <fullName>From_Amount__c</fullName>
    <description>From Amount ile To amount, Kullanılacak faiz oranı için Para aralığını belirleyecek. Amount miktarını belirtecek.</description>
    <label>From Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>