force-app/main/default/objects/Interest_Schemes__c/fields/Tenor_From_Days__c.field-meta.xml
<CustomField>
    <fullName>Tenor_From_Days__c</fullName>
    <description>Tenor From ile Tenor to arasındaki gün sayısı ile
Range belirtiyoruz. Master Object Data&apos;da o
aralığa göre faiz oranı belirtilmiş durumda</description>
    <label>Tenor From Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>