force-app/main/default/objects/Interest_Schemes__c/fields/Tenor_From_Months__c.field-meta.xml
<CustomField>
    <fullName>Tenor_From_Months__c</fullName>
    <description>Vadenin baslama ayini gosterir</description>
    <label>Tenor From Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>