force-app/main/default/objects/Interest_Schemes__c/fields/Tenor_To_Days__c.field-meta.xml
<CustomField>
    <fullName>Tenor_To_Days__c</fullName>
    <description>Vade Suresinin bitis tarihini gosterir</description>
    <label>Tenor To Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>