force-app/main/default/objects/Interest_Schemes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Type__c</columns>
    <columns>Deposit_Type__c</columns>
    <columns>From_Amount__c</columns>
    <columns>To_Amount__c</columns>
    <columns>Tenor_From_Months__c</columns>
    <columns>Tenor_From_Days__c</columns>
    <columns>Tenor_To_Days__c</columns>
    <columns>Tenor_To_Months__c</columns>
    <columns>Interest_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>